# Changelog

## Version 5.12.4

* Fixing #675 "Default Source Folder" not used when adding Complete Folders (thanks to Krawk)
* Fixing #678 Cannot copy the cover (thanks to danielly2020)
* Fixing #679 Subtitle extraction (thanks to danielly2020)

## Version 5.12.3

* Fixing #673 changing subtitle langauge in the UI did not take effect in the command (thanks to danielly2020)
* Fixing #673 extract subtitle command was looking for subtitle index, not absolute index (thanks to danielly2020)

## Version 5.12.2

* Fixing #670 #671 Switching to the NVEncC AV1 encoder will break FastFlix (thanks to Krawk and EfxAceituna)
* Fixing error switching between copy and other encoders will break FastFlix

## Version 5.12.1

* Fixing #654 Failed to import attachment due to bad mime type gathering (thanks to larsk2)
* Fixing #659 current profile panel won't open (thanks to danielly2020)
* Fixing missing undefined option for audio tracks (thanks to danielly2020)
* Fixing missing unittests for common encoder options
* Fixing some extra spaces in commands
* Fixing logs were showing red for info commands
* Fixing missing translations (thanks to danielly2020)

## Version 5.12.0

* Adding automatic downloads for rigaya encoders on Windows
* Adding #45 audio normalization (thanks to HannesJo0139, Marco Ravich, Kirill, Werner Robitza, Type-Delta, Xoanon88)
* Adding ability to add subtitle or audio track
* Fixing custom_crf not being found (thanks to Norbert)
* Fixing missing space to CRF (thanks to Noelle)

## Version 5.11.0

* Adding parallel encoding options for rigaya hardware encoders (thanks to Hexenhammer)
* Adding builds for Ubuntu 22.04 and mac 13 again
* Changing SVT-AV1 to single pass only due to ffmpeg not allowing passlog files properly
* Changing SVT-AV1 to CRF quantization mode by default
* Fixing #642 Possible to create a profile without bitrate specified for audio stream (thanks to Xoanon88)
* Fixing #644 various typos (thanks to luzpaz)